<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground"
    tools:context=".EntrantAndOrganizerFragments.ProfileDetails.profileScreenEditFragment">

    <ImageButton
        android:id="@+id/EditNumber"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        android:elevation="21dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/profileNumber2"
        app:layout_constraintHorizontal_bias="0.965"
        app:layout_constraintStart_toStartOf="@+id/profileNumber2"
        app:layout_constraintTop_toTopOf="@+id/profileNumber2"
        app:layout_constraintVertical_bias="0.023"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/EditEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:background="@null"
        android:elevation="21dp"
        app:layout_constraintBottom_toBottomOf="@+id/profileEmail2"
        app:layout_constraintEnd_toEndOf="@+id/profileEmail2"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="@+id/profileEmail2"
        app:layout_constraintTop_toBottomOf="@+id/EditNumber"
        app:layout_constraintVertical_bias="0.923"
        app:srcCompat="@android:drawable/ic_menu_edit"
        app:tint="@color/black" />

    <ImageButton
        android:id="@+id/EditName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@null"
        android:elevation="21dp"
        app:layout_constraintBottom_toBottomOf="@+id/profileName3"
        app:layout_constraintEnd_toEndOf="@+id/profileName3"
        app:layout_constraintHorizontal_bias="0.968"
        app:layout_constraintStart_toStartOf="@+id/profileName3"

        app:srcCompat="@android:drawable/ic_menu_edit"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/bar4"
        android:layout_width="match_parent"
        android:layout_height="57dp"
        android:layout_marginTop="32dp"
        android:background="#93BDB6"
        android:text=""
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/profile_image4"
        android:layout_width="217dp"
        android:layout_height="198dp"
        android:layout_gravity="center"
        android:layout_marginTop="112dp"
        android:elevation="2dp"
        app:civ_border_color="@android:color/black"
        app:civ_border_width="2dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/profileNumber2"
        android:layout_width="369dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:elevation="20dp"
        android:paddingLeft="18dp"
        android:paddingTop="14dp"
        android:text="Number:"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileName3" />

    <TextView
        android:id="@+id/app_name5"
        android:layout_width="121dp"
        android:layout_height="55dp"
        android:elevation="20dp"
        android:fontFamily="@font/bai_jamjuree_bold"
        android:text="Profile"
        android:textAllCaps="true"
        android:textColor="#000000"
        android:textSize="28sp"
        android:textStyle="italic"
        android:typeface="normal"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.04" />

    <TextView
        android:id="@+id/profileName3"
        android:layout_width="369dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="56dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:elevation="20dp"
        android:paddingLeft="18dp"
        android:paddingTop="14dp"
        android:text="Name:"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        android:visibility="visible"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.545"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profile_image4" />

    <ImageButton
        android:id="@+id/backButton3"
        android:layout_width="58dp"
        android:layout_height="56dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:background="@null"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@android:drawable/ic_menu_revert"
        app:tint="@color/black" />

    <TextView
        android:id="@+id/profileEmail2"
        android:layout_width="369dp"
        android:layout_height="54dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/border"
        android:elevation="20dp"
        android:paddingLeft="18dp"
        android:paddingTop="14dp"
        android:text="Email:"
        android:textColor="@android:color/black"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/profileNumber2"
        app:layout_constraintVertical_bias="0.02" />

    <ImageButton
        android:id="@+id/saveProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:background="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.958"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.832"
        app:srcCompat="@android:drawable/ic_menu_save" />

    <TextView
        android:id="@+id/textView12"
        android:layout_width="99dp"
        android:layout_height="29dp"
        android:layout_marginStart="262dp"
        android:layout_marginTop="620dp"
        android:layout_marginEnd="52dp"
        android:layout_marginBottom="117dp"
        android:text="Save Details"
        android:textColor="#090707"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.633" />

</androidx.constraintlayout.widget.ConstraintLayout>